plugins {
    id 'java'
    id 'org.springframework.boot' version '4.1.1'
    id 'io.spring.dependency-management' version '1.1.7'
    id 'org.graalvm.buildtools.native' version '1.1.8'
    id 'distribution'
}

group = 'com.rtoda3'
version = '0.0.1-SNAPSHOT'
description = 'aismfwav'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(25)
    }
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter'
    implementation 'org.springframework.boot:spring-boot-starter-log4j2'
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testCompileOnly 'org.projectlombok:lombok'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
    testAnnotationProcessor 'org.projectlombok:lombok'
}

// 全ての依存関係からデフォルトのロギング（Logback）を一括除外
configurations {
    all {
        exclude group: 'org.springframework.boot', module: 'spring-boot-starter-logging'
    }
}

tasks.named('test') {
    useJUnitPlatform()
}

// --- 配布用ZIP/TARの定義 ---
distributions {
    main {
        distributionBaseName = 'ramidi'
        contents {
            exclude '**/*.mid'
            exclude '**/*.wav'
            exclude '**/*.wav'
            exclude '**/*.sf*'
            exclude '**/*.mp*'

            // ネイティブビルドの出力物をアーカイブのルートに含める
            from(tasks.named('nativeCompile').map { it.outputs.files }) {
                into('bin')
            }

            from('lib') { into 'lib' }
            from('sample') { into 'sample' }
            from('soundfonts') { into 'soundfonts' }
            from('application.properties')
            from('README.md')
        }
    }
}